@@ -91,60 +91,33 @@
                 <version>1.6.0</version>
                 <executions>
                     <execution>
-                        <id>runtimeImage</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${java.home}/bin/jlink</executable>
-                            <arguments>
-                                <argument>--module-path=javafx-jmods-11.0.2/</argument>
-                                <argument>--add-modules=java.base</argument>
-                                <argument>--add-modules=java.prefs</argument>
-                                <argument>--add-modules=java.desktop</argument>
-                                <argument>--add-modules=java.net.http</argument>
-                                <argument>--add-modules=java.xml</argument>
-                                <argument>--add-modules=java.prefs</argument>
-                                <argument>--add-modules=java.logging</argument>
-                                <argument>--add-modules=java.sql</argument>
-                                <argument>--add-modules=javafx.base</argument>
-                                <argument>--add-modules=javafx.controls</argument>
-                                <argument>--add-modules=javafx.fxml</argument>
-                                <argument>--add-modules=javafx.graphics</argument>
-                                <argument>--add-modules=javafx.media</argument>
-                                <argument>--add-modules=java.management</argument>
-                                <argument>--output=${project.build.directory}/image</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
                         <id>installer</id>
                         <phase>install</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>jpackage</executable>
+                            <longModulepath>false</longModulepath>
+                            <executable>${java.home}/bin/jpackage</executable>
                             <arguments>
-                                <argument>create-installer</argument>
-                                <argument>--runtime-image</argument>
-                                <argument>${project.build.directory}/image</argument>
-                                <argument>--output</argument>
-                                <argument>${project.build.directory}/release</argument>
+                                <argument>--verbose</argument>
                                 <argument>--input</argument>
                                 <argument>${project.build.directory}/app</argument>
+                                <argument>--dest</argument>
+                                <argument>${project.build.directory}/release</argument>
                                 <argument>--main-jar</argument>
                                 <argument>bigtableviewer-${project.version}.jar</argument>
-                                <argument>--class</argument>
+                                <argument>--main-class</argument>
                                 <argument>${mainClass}</argument>
                                 <argument>--name</argument>
                                 <argument>${project.name}</argument>
                                 <argument>--license-file</argument>
                                 <argument>LICENSE</argument>
-                                <argument>--identifier</argument>
+                                <argument>--mac-package-name</argument>
+                                <argument>btviewer</argument>
+                                <argument>--mac-package-identifier</argument>
                                 <argument>${project.groupId}.${project.artifactId}</argument>
-                                <argument>--version</argument>
+                                <argument>--app-version</argument>
                                 <argument>${project.version}</argument>
                             </arguments>
                         </configuration>
@@ -219,11 +192,6 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
